--- a/style.css
+++ b/style.css
@@ -1,14 +1,17 @@
+body{
+    padding-top: 100px;
+}
 #PageA4{
-    width: 595px;
-    height: 842px;
-    border: 1px solid;
-    margin: auto;
-    padding: 15px 30px 30px 30px;
-    background-image: url('fond_bleu.png');
-    background-size: contain;
-    background-repeat: no-repeat;
-    font-family: 'Inter';
-
+    width: 595px; /*largeur de la page A4*/
+    height: 842px; /*longueur de la A4*/
+    border: 1px solid; /*bordure de la page A4*/
+    margin: auto; /*Positionnemt de la page A4*/
+    padding: 15px 30px 30px 30px; /*bourage a l'interieur de la page A4*/
+    background-image: url('img/fond_bleu.png'); /*fond bleu en arriere plan*/
+    background-size: contain;/*la taille du background*/
+    background-repeat: no-repeat;/*pas de repetition*/
+    font-family: 'Inter';/*la police en Inter*/
+    box-shadow: 0px 0px 5px 5px rgba(0, 0, 0, 0.397);/*Ombre noir derriere la page A4*/
 }
 .photo{
     width: 155px;
@@ -27,6 +30,7 @@ img{
     width: 155px;
     height: 165px;
 }
+/*les titres profils,parcours,experience et competences*/
 .titre{
     border: 1px solid;
     width: auto;
@@ -35,6 +39,7 @@ img{
     font-weight: bold;
     font-size: 14px;
 }
+/*couleur de la presentation*/
 .identi{
     color: white;
 }
@@ -77,7 +82,7 @@ table{
 }
 .text_profil{
     text-align: justify;
-    font-size: 11px;
+    font-size: 12px;
     padding-bottom: 5px;
     padding-top: 5px;
 }
@@ -88,15 +93,18 @@ progress{
 th{
     width: 10%;
     text-align: left;
-    padding: none;
+    padding: 0px;
+    height: 3px;
 }
 td{
     width: 10%;
     text-align: left;
     padding: none;
     text-align: inherit;
+    position: relative;
+    top: 0px;
 }
-.img_inte{
+.img_interet{
     width: 15px;
     height: 15px;
 }
@@ -117,13 +125,14 @@ span{
     border-color: #583EFF;
     height: 105px;
     position: relative;
+
 }
 .section2{
     border-left: 2px solid;
     padding-left: 20px;
     border-color: #583EFF;
     height: 105px;
-    position: relative;
+    position: absolute;
     left: 300px;
     top: -105px;
 }
@@ -161,4 +170,63 @@ span{
 }
 .parcour_cont{
     font-size: 12px;
+}
+.container{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto;
+    grid-gap: 20px;
+    padding-left: 2px;
+}
+.item{
+    border-left: 2px solid;
+    border-color: #583EFF;
+    padding-left: 10px;
+}
+.item::before{
+    content: '';
+    position: absolute; 
+    width: 10px; 
+    height: 10px;
+    background-color: #583EFF; 
+    border-radius: 50%;
+}
+.competence{
+    line-height: 5px;
+    font-size: 9px;
+    margin: auto;
+    width: auto;
+    padding-left: 3px;
+}
+/* Styles pour le conteneur de la barre de niveau */
+progress {
+    width: 100%;  /*Largeur de la barre de niveau */
+    height: 5px; /* Hauteur de la barre de niveau */
+    border: none; /* Supprime la bordure par défaut */
+    border-radius: 5px; /* Ajoute des coins arrondis */
+    background-color: #f2f2f2; /* Couleur de fond */
+    margin: 0px 0px 0px; /* Marge autour de la barre de niveau */
+    margin-right: 4px;
+}
+
+/* Styles pour la barre de niveau remplie */
+progress::-webkit-progress-value {
+    background-color: #583EFF; /* Couleur de remplissage */
+    border-radius: 5px; /* Coins arrondis */
+}
+
+/* Styles pour la barre de niveau non remplie */
+progress::-webkit-progress-bar {
+    background-color: #f2f2f2; /* Couleur de fond */
+    border-radius: 5px; /* Coins arrondis */
+}
+.interet{
+    border: 1px solid;
+    text-align: center;
+    box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.397);
+    position: static;
+}
+.int{
+    width: 100px;
+    padding-right: 50px;
 }
