--- a/style.css
+++ b/style.css
@@ -1,18 +1,26 @@
 body{
     padding-top: 100px;
+    padding-bottom: 100px;
 }
+:root {
+    --couleur-principale: #583EFF; /* Définition de la variable --couleur-principale */
+}
+/*la page A4*/
 #PageA4{
-    width: 595px; /*largeur de la page A4*/
-    height: 842px; /*longueur de la A4*/
-    border: 1px solid; /*bordure de la page A4*/
-    margin: auto; /*Positionnemt de la page A4*/
-    padding: 15px 30px 30px 30px; /*bourage a l'interieur de la page A4*/
-    background-image: url('img/fond_bleu.png'); /*fond bleu en arriere plan*/
+    width: 595px;
+    height: 842px;
+    border: 1px solid;
+    margin: auto; /*Positionnemt central de la page A4*/
+    padding: 15px 30px 30px 30px;
+    background-image: url('img/fond_bleu.png');
     background-size: contain;/*la taille du background*/
-    background-repeat: no-repeat;/*pas de repetition*/
-    font-family: 'Inter';/*la police en Inter*/
-    box-shadow: 0px 0px 5px 5px rgba(0, 0, 0, 0.397);/*Ombre noir derriere la page A4*/
+    background-repeat: no-repeat;
+    font-family: 'Inter';
+    box-shadow: 0px 0px 5px 5px rgba(0, 0, 0, 0.397);
 }
+/***********************************************************************************************/
+/*Les styles au niveau de header*/
+/*Dimensions du cadre de la photo*/
 .photo{
     width: 155px;
     height: 165px;
@@ -21,16 +29,16 @@ body{
     border-radius: 20px;
     background-color: white;
     border-color: white;
-    position: relative;
+    position: relative;/*Pour pouvoir déplacer le cadre grace a top et right*/
     top: 0px;
     right: 80px;
-
 }
+/*Dimensions de l'image*/
 img{
     width: 155px;
     height: 165px;
 }
-/*les titres profils,parcours,experience et competences*/
+/*styles des titres : profils,parcours,experience et competences*/
 .titre{
     border: 1px solid;
     width: auto;
@@ -38,8 +46,9 @@ img{
     box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.397);
     font-weight: bold;
     font-size: 14px;
+    margin-bottom: 7.5px;
+    margin-top: 7.5px;
 }
-/*couleur de la presentation*/
 .identi{
     color: white;
 }
@@ -78,18 +87,182 @@ table{
     height: 15px;
     position: relative;
     top: 30px;
-    left: 100px;
+    left: 92px;
 }
+/***********************************************************************************************/
+/*Styles pour la partie main*/
 .text_profil{
     text-align: justify;
     font-size: 12px;
     padding-bottom: 5px;
     padding-top: 5px;
 }
-progress{
-    width: 100%;
-    height: 10px;
+.parcour_titre{
+    font-weight: bold;
+    font-size: 12px;
 }
+.parcour_cont{
+    font-size: 12px;
+}
+.container{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto;
+    grid-gap: 20px;
+    padding-left: 25px;
+}
+/*Premier trait ODK en cours - LGBio*/
+.trait{
+    border-left: 2px solid;
+    border-color: var(--couleur-principale);
+    height: 110px;
+    position: relative;
+    float: left;
+    top: 9px;
+    left: 5px;
+}
+/*Deuxieme trait Stage BM - ITE*/
+.trait2{
+    border-left: 2px solid;
+    border-color: var(--couleur-principale);
+    height: 110px;
+    position: relative;
+    float: left;
+    top: 9px;
+    left: 5px;
+}
+/*Leurs points en haut*/
+.trait::before,
+.trait2::before{
+    content: '';
+    position: absolute; 
+    width: 10px; 
+    height: 10px;
+    background-color: var(--couleur-principale); 
+    border-radius: 50%;
+    left: -5px;
+}
+/*Leurs points en bas*/
+.trait::after,
+.trait2::after{
+    content: '';
+    position: absolute; 
+    width: 10px; 
+    height: 10px;
+    background-color: var(--couleur-principale); 
+    border-radius: 50%;
+    top: 100px;
+    left: -5px;
+}
+/*Troisieme trait ITE - Reparation d'ordinateurs*/
+.trait2_2{
+    border-left: 2px solid;
+    border-color: var(--couleur-principale);
+    height: 55px;
+    position: relative;
+    float: left;
+    top: 110px;
+    left: 3px;
+}
+/*Le point en bas*/
+.trait2_2::after{
+    content: '';
+    position: absolute; 
+    width: 10px; 
+    height: 10px;
+    background-color: var(--couleur-principale); 
+    border-radius: 50%;
+    top: 55px;
+    left: -5px;
+}
+/*Les traits et points à droite*/
+.trait_right{
+    border-left: 2px solid;
+    border-color: var(--couleur-principale);
+    height: 110px;
+    position: relative;
+    float: left;
+    top: 9px;
+    left: 300px;
+}
+.trait2_right{
+    border-left: 2px solid;
+    border-color: var(--couleur-principale);
+    height: 110px;
+    position: relative;
+    float: left;
+    top: 9px;
+    left: 300px;
+}
+.trait2_2_right{
+    border-left: 2px solid;
+    border-color: var(--couleur-principale);
+    height: 55px;
+    position: relative;
+    float: left;
+    top: 110px;
+    left: 299px;
+}
+.trait2_2_right::after{
+    content: '';
+    position: absolute; 
+    width: 10px; 
+    height: 10px;
+    background-color: var(--couleur-principale); 
+    border-radius: 50%;
+    top: 55px;
+    left: -5px;
+}
+.trait_right::before,
+.trait2_right::before{
+    content: '';
+    position: absolute; 
+    width: 10px; 
+    height: 10px;
+    background-color: var(--couleur-principale); 
+    border-radius: 50%;
+    left: -5px;
+}
+.trait_right::after,
+.trait2_right::after{
+    content: '';
+    position: absolute; 
+    width: 10px; 
+    height: 10px;
+    background-color: var(--couleur-principale); 
+    border-radius: 50%;
+    top: 100px;
+    left: -5px;
+}
+/*Styles des compétences*/
+.competence{
+    line-height: 5px;
+    font-size: 9px;
+    margin: auto;
+    width: auto;
+    padding-left: 3px;
+}
+/* Styles pour le conteneur de la barre de niveau */
+progress {
+    width: 100%;  
+    height: 5px; 
+    border: none; 
+    border-radius: 5px; 
+    background-color: #f2f2f2; 
+    margin: 0px 0px 0px; /* Marge autour de la barre de niveau */
+    margin-right: 4px;
+}
+/* Styles pour la barre de niveau remplie */
+progress::-webkit-progress-value {
+    background-color: var(--couleur-principale);
+    border-radius: 5px;
+}
+/* Styles pour la barre de niveau non remplie */
+progress::-webkit-progress-bar {
+    background-color: #d1c5c5;
+    border-radius: 5px;
+}
+/*pour les competences et les barres de niveau qui sont dans un tableau*/
 th{
     width: 10%;
     text-align: left;
@@ -104,13 +277,13 @@ td{
     position: relative;
     top: 0px;
 }
-.img_interet{
-    width: 15px;
-    height: 15px;
-}
+/***********************************************************************************************/
+/*Styles pour la partie footer*/
 .interet{
     border: 1px solid;
     text-align: center;
+    box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.397);
+    
 }
 span{
     font-family: 'Inter';
@@ -118,115 +291,13 @@ span{
 }
 .int{
     width: 100px;
+    padding-right: 50px;
 }
-.section{
-    border-left: 2px solid;
-    padding-left: 20px;
-    border-color: #583EFF;
-    height: 105px;
-    position: relative;
-
-}
-.section2{
-    border-left: 2px solid;
-    padding-left: 20px;
-    border-color: #583EFF;
-    height: 105px;
-    position: absolute;
-    left: 300px;
-    top: -105px;
-}
-.section::before,
-.section::after,
-.section2::before,
-.section2::after {
-        content: '';
-        position: absolute; 
-        width: 10px; 
-        height: 10px;
-        background-color: #583EFF; 
-        border-radius: 50%;
-        
-    }
-.section::before{
-    top: 0px;
-    left: -5px;
-}
-.section::after{
-    top: 100px;
-    left: -5px;
-}
-.section2::before{
-    top: 0px;
-    left: -5px;
-}
-.section2::after{
-    top: 100px;
-    left: -5px;
-}
-.parcour_titre{
-    font-weight: bold;
-    font-size: 12px;
-}
-.parcour_cont{
-    font-size: 12px;
-}
-.container{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: auto;
-    grid-gap: 20px;
-    padding-left: 2px;
-}
-.item{
-    border-left: 2px solid;
-    border-color: #583EFF;
-    padding-left: 10px;
-}
-.item::before{
-    content: '';
-    position: absolute; 
-    width: 10px; 
-    height: 10px;
-    background-color: #583EFF; 
-    border-radius: 50%;
-}
-.competence{
-    line-height: 5px;
-    font-size: 9px;
-    margin: auto;
-    width: auto;
-    padding-left: 3px;
-}
-/* Styles pour le conteneur de la barre de niveau */
-progress {
-    width: 100%;  /*Largeur de la barre de niveau */
-    height: 5px; /* Hauteur de la barre de niveau */
-    border: none; /* Supprime la bordure par défaut */
-    border-radius: 5px; /* Ajoute des coins arrondis */
-    background-color: #f2f2f2; /* Couleur de fond */
-    margin: 0px 0px 0px; /* Marge autour de la barre de niveau */
-    margin-right: 4px;
-}
-
-/* Styles pour la barre de niveau remplie */
-progress::-webkit-progress-value {
-    background-color: #583EFF; /* Couleur de remplissage */
-    border-radius: 5px; /* Coins arrondis */
-}
-
-/* Styles pour la barre de niveau non remplie */
-progress::-webkit-progress-bar {
-    background-color: #f2f2f2; /* Couleur de fond */
-    border-radius: 5px; /* Coins arrondis */
+.img_interet{
+    width: 15px;
+    height: 15px;
 }
 .interet{
     border: 1px solid;
     text-align: center;
-    box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.397);
-    position: static;
-}
-.int{
-    width: 100px;
-    padding-right: 50px;
 }
