--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,7 @@ main{
     font-weight: bold;
     font-size: 120%;
     word-wrap: break-word;
+    
 }
 .parcour_cont{
     font-size: 120%;
@@ -53,7 +54,7 @@ main{
 }
 .item{
     padding-bottom: 13px;
-    line-height: 2%;
+    /* line-height: 2%; */
     border-left: 5px solid var(--couleur-principale);
     padding-left: 5%;
 }
